mac测试提交是否成功

--- a/3.计算属性/4.姓名案例_计算属性简写.html
+++ b/3.计算属性/4.姓名案例_计算属性简写.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>3.姓名案例_computed实现</title>
+    <title>姓名案例_computed实现</title>
     <script type="text/javascript" src="../100vueJs/vue.js"></script>
 </head>
 <body>
